# ExampleCppGitHubActions

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: test.yml
Application/: CMakeLists.txt  main.cpp
Test/: CMakeLists.txt  UnitLibraryCalculator.cpp  main.cpp
